objects/copado__Test__c.object
<CustomObject>
    <description>Copado Object to spin a test scenario</description>
    <fields>
        <fullName>copado__Category__c</fullName>
        <label>Test Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Configuration__c</fullName>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Reference__c</fullName>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>copado__Tool__c</fullName>
        <label>Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>copado__Reference__c</columns>
        <columns>NAME</columns>
        <columns>copado__Category__c</columns>
        <columns>copado__Tool__c</columns>
        <columns>copado__User_Story__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>